# Bidding-Application

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
bids/: apps.py  consumers.py  models.py  routing.py  schemas.py  service.py  use_cases.py
bids/migrations/: 0001_initial.py  0002_alter_bid_options_alter_bidhistory_options_and_more.py  0003_bidhistory_added_at.py  0004_bid_status.py
core/: asgi.py  configs.py  settings.py  urls.py
kind-k8s-cluster-deployment/: kustomization.yaml
kind-k8s-cluster-deployment/app-backend/: deployment.yaml  ingress.yaml  job.yaml  seed_bids.sql  service.yaml
kind-k8s-cluster-deployment/db/: postgres.yaml  service.yaml
kind-k8s-cluster-deployment/redis-cache/: redis.yaml  service.yaml
