[tool.poetry]
name = "bidding-application"
version = "0.1.0"
description = ""
authors = ["Bakr Frag"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
pydantic-settings = "^2.12.0"
dj-database-url = "^3.0.1"
build = "^1.3.0"
channels = "^4.3.2"
channels-redis = "^4.3.0"
daphne = "^4.2.1"
pydantic = "^2.12.5"
psycopg2-binary = "^2.9.11"
psycopg2 = "^2.9.11"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
django-debug-toolbar = "^6.1.0"
django-silk = "^5.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
